--- a/LGPL/Tools/Makefile
+++ b/LGPL/Tools/Makefile
@@ -26,6 +26,8 @@
 # REMARKS
 #    None
 #------------------------------------------------------------------------
+osrev  = $(shell uname -r)
+os     = $(shell uname)
 
 ###############################################
 # Macro definitions.                          #
