--- a/Benchmark/bulkDataNTPerf/src/Makefile
+++ b/Benchmark/bulkDataNTPerf/src/Makefile
@@ -80,7 +80,7 @@ EXECUTABLES_L   =
 bdntSenderSimulator_OBJECTS = bdntSenderSimulator BDNTSenderSimulatorFlow SenderFlowSimCallback
 bdntSenderSimulator_LIBS= bulkDataNTSender
 
-bulkDataNTGenReceiver_OBJECTS = bulkDataNTGenReceiver
+bulkDataNTGenReceiver_OBJECTS = bulkDataNTGenReceiver ReceiverFlowSimCallback
 bulkDataNTGenReceiver_LIBS= bulkDataNTReceiver 
 
 #
