--- a/LGPL/acsBUILD/src/Makefile
+++ b/LGPL/acsBUILD/src/Makefile
@@ -113,7 +113,7 @@ SCRIPTS_L       =
 
 PY_SCRIPTS = acsJdocMaker
 PY_SCRIPTS_L = acsGenGlobalPythonIndex
-PY_PACKAGES = AcsJavadoc
+PY_PACKAGES = 
 
 #
 # TCL scripts (public and local)
