--- a/LGPL/acsBUILD/src/Makefile
+++ b/LGPL/acsBUILD/src/Makefile
@@ -111,7 +111,7 @@ SCRIPTS         = acsBUILDBeforeInstall.sh acsBUILDTest \
 SCRIPTS_L       = 
 
 
-PY_SCRIPTS = acsJdocMaker
+PY_SCRIPTS = 
 PY_SCRIPTS_L = acsGenGlobalPythonIndex 
 PY_PACKAGES = 
 
