adding paths for system based TAO libs

--- a/LGPL/CommonSoftware/acstime/ws/src/Makefile
+++ b/LGPL/CommonSoftware/acstime/ws/src/Makefile
@@ -26,7 +26,7 @@ DEBUG=on
 
 #
 # additional include and library search paths
-USER_INC = -I$(PYTHONINC)
+USER_INC = -I$(PYTHONINC) -I/usr/include/orbsvcs/ -I/usr/src/debug/ACE_wrappers/TAO/
 #USER_LIB = 
 
 #
