Changing PATH SEP to :

--- a/LGPL/CommonSoftware/jacsutil/src/Makefile
+++ b/LGPL/CommonSoftware/jacsutil/src/Makefile
@@ -70,7 +70,7 @@ endif
 #else
 #   SEPARATOR=:
 #endif
-CLASSPATH := $(JAVA_HOME)/lib/tools.jar$(PATH_SEP)$(CLASSPATH)$(PATH_SEP).
+CLASSPATH := $(JAVA_HOME)/lib/tools.jar:$(CLASSPATH)
 
 #
 # TARGETS
